# rag-chatbot

./: .env.example  .gitignore  DOCKER_GUIDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  docker-compose.dev.yml  docker-compose.yml  package.json  rag-engine-cli.sh
client/: Dockerfile  README.md  package.json  pnpm-lock.yaml
client/src/app/: layout.tsx  page.tsx
client/src/app/collections/: page.tsx
client/src/app/collections/[name]/: page.tsx
client/src/app/ingest/: page.tsx
client/src/app/playground/: page.tsx
client/src/components/: collection-list.tsx  nav.tsx
client/src/lib/: api-client.ts  query-keys.ts  types.ts
client/src/stores/: use-app-store.ts
rag-engine/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
rag-engine/examples/: batch_nested.json  chat.json  chats.jsonl  single_conversation.json  single_conversation.txt
rag-engine/rag_engine/: __init__.py  api.py  cli.py  config.py  embedding.py  pipeline.py  preprocess.py  vector_store.py
server/: Dockerfile  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
server/src/: app.module.ts  main.ts
server/src/chat/: chat.controller.ts  chat.module.ts  chat.service.ts
server/src/chroma/: chroma.controller.ts  chroma.module.ts  chroma.service.ts  types.ts
server/src/rag/: rag.controller.ts  rag.module.ts
server/test/: app.e2e-spec.ts  jest-e2e.json
